Hacks to allow split vkd3d builds

--- a/dlls/wined3d/Makefile.in
+++ b/dlls/wined3d/Makefile.in
@@ -1,7 +1,11 @@
 MODULE    = wined3d.dll
 IMPORTLIB = wined3d
-IMPORTS   = $(VKD3D_PE_LIBS) dxguid opengl32 user32 gdi32 advapi32
+IMPORTS   = dxguid opengl32 user32 gdi32 advapi32
 EXTRAINCL = $(VKD3D_PE_CFLAGS)
+arm64ec_EXTRADLLFLAGS = $(VKD3D_PE_LIBS)
+i386_EXTRADLLFLAGS = $(VKD3D_PE_LIBS)
+x86_64_EXTRADLLFLAGS = $(VKD3D_PE_LIBS)
+aarch64_EXTRA_LIBS = vkd3d
 
 SOURCES = \
 	adapter_gl.c \
