configure: Test PE compilers after setting their target argument.
clang will default to the host if no target is specified, which causes
compile test failures if arch-specific CFLAGS are used for a non-host
arch.

--- a/configure.ac
+++ b/configure.ac
@@ -876,14 +876,9 @@ do
     AS_VAR_COPY([CC],[${wine_arch}_CC])
     AS_VAR_SET([${wine_arch}_EXTRACFLAGS],["-D__WINE_PE_BUILD -Wall"])
 
-    target=""
-    AS_VAR_PUSHDEF([wine_cv_crosscc],[ac_cv_${wine_arch}_crosscc])
     AS_VAR_IF([${wine_arch}_CC],[false],[],
-        [AC_CACHE_CHECK([whether $CC works],[wine_cv_crosscc],
-            [AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
-                [AS_VAR_SET([wine_cv_crosscc],[yes])],[AS_VAR_SET([wine_cv_crosscc],[no])])])])
-    AS_VAR_IF([wine_cv_crosscc],[yes],
-       [set x $CC
+        [target=""
+        set x $CC
         shift
         while test $# -ge 1
         do
@@ -906,6 +901,7 @@ do
         fi
         llvm_extra_cflags="-target $llvm_target -fuse-ld=lld"
         llvm_extra_ldflags=""
+        llvm_cflags=""
         case $llvm_target in
           *windows) llvm_cflags="-Wl,-subsystem:console -Wl,-WX" ;;
         esac
@@ -922,8 +918,9 @@ do
             AS_VAR_APPEND([${wine_arch}_LDFLAGS],[" $llvm_extra_ldflags"])
             CFLAGS="$llvm_extra_cflags $llvm_cflags"
         fi
-        AS_VAR_SET([${wine_arch}_TARGET],[$target])])
-    AS_VAR_POPDEF([wine_cv_crosscc])
+        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
+            [],[AS_VAR_SET([target],[""])])
+    ])
 
     if test -z "$target"
     then
@@ -937,6 +934,7 @@ This is an error since --enable-archs=$wine_arch was requested.])])
         continue
     fi
 
+    AS_VAR_SET([${wine_arch}_TARGET],[$target])
     AS_VAR_PUSHDEF([wine_cv_crosscc_c99],[ac_cv_${wine_arch}_crosscc_c99])
     AC_MSG_CHECKING([for $CC option to enable C99 features])
     AC_CACHE_VAL([wine_cv_crosscc_c99],
