ntdll: Build chkstk as x86_64 on ARM64EC.

--- a/dlls/ntdll/Makefile.in
+++ b/dlls/ntdll/Makefile.in
@@ -71,7 +71,8 @@ SOURCES = \
 	unwind.c \
 	version.c \
 	version.rc \
-	wcstring.c
+	wcstring.c \
+	chkstk_x86_64.c
 
 EXTRA_OBJS = unix/version.o
 
